--- a/src/main/resources/view/PersonInformationPanel.fxml
+++ b/src/main/resources/view/PersonInformationPanel.fxml
@@ -1,33 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="465.0" prefWidth="401.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <SplitPane dividerPositions="0.5" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <items>
-            <AnchorPane prefWidth="100.0">
+            <AnchorPane prefHeight="463.0" prefWidth="228.0" style="-fx-background-color: transparent;">
                <children>
-                  <VBox>
-                     <children>
-                        <Label fx:id="id" styleClass="label-header" />
-                        <Label fx:id="name" styleClass="name" />
-                        <HBox>
+                  <ScrollPane blendMode="OVERLAY" fitToHeight="true" fitToWidth="true" hbarPolicy="ALWAYS" pannable="true" prefHeight="463.0" prefWidth="400.0" style="-fx-background-color: transparent;" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <content>
+                        <VBox blendMode="OVERLAY" prefHeight="448.0" prefWidth="49.0">
                            <children>
-                              <VBox minHeight="30" />
-                              <Label fx:id="customFields" styleClass="label-bright" />
+                              <Label fx:id="id" styleClass="label-header" />
+                              <Label fx:id="name" styleClass="name" />
+                              <HBox>
+                                 <children>
+                                    <VBox minHeight="30" />
+                                    <Label fx:id="customFields" styleClass="label-bright" />
+                                 </children>
+                              </HBox>
                            </children>
-                        </HBox>
-                     </children>
-                  </VBox>
+                        </VBox>
+                     </content>
+                  </ScrollPane>
                </children>
             </AnchorPane>
-            <AnchorPane prefHeight="160.0" prefWidth="100.0">
+            <AnchorPane prefHeight="463.0" prefWidth="312.0">
                <children>
                   <VBox minHeight="30">
                      <children>
