--- a/src/main/resources/view/PersonInformationPanel.fxml
+++ b/src/main/resources/view/PersonInformationPanel.fxml
@@ -14,6 +14,7 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
+                   <!-- @@author LuLechuan -->
                    <ScrollPane style="-fx-background-color: transparent;" prefHeight="450" prefWidth="450">
                        <VBox>
                          <children>
@@ -36,6 +37,7 @@
                          </children>
                       </VBox>
                    </ScrollPane>
+                   <!-- @@author -->
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
