--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -34,6 +34,7 @@
          <RowConstraints />
       </rowConstraints>
   </GridPane>
+  <!-- @@author LuLechuan -->
   <HBox alignment="CENTER" prefHeight="60.0" prefWidth="60.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" >
     <children>
       <ImageView fx:id="photoContainer" fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true" />
